--- a/Snowpark_Sentiment_Analysis_Public.ipynb
+++ b/Snowpark_Sentiment_Analysis_Public.ipynb
@@ -106,10 +106,10 @@
         "\n",
         "# --> EDIT THIS WITH YOUR ACCOUNT & CREDS\n",
         "CONNECTION_PARAMETERS = {\n",
-        "    \"host\": \"Your_Snowflake_Account.snowflakecomputing.com\",\n",
-        "    'account': 'Your_Snowflake_Account',\n",
-        "    'user': 'Your_User',\n",
-        "    'password': 'Your_PW'\n",
+        "    \"host\": \"GBA61345.snowflakecomputing.com\",\n",
+        "    'account': 'GBA61345',\n",
+        "    'user': 'ADMIN',\n",
+        "    'password': 'IIVE2BGinnyc?'\n",
         "}\n",
         "\n",
         "print(\"Connecting to Snowflake.....\\n\")\n",
