--- a/Snowpark_Sentiment_Analysis_Public.ipynb
+++ b/Snowpark_Sentiment_Analysis_Public.ipynb
@@ -109,7 +109,7 @@
         "    \"host\": \"GBA61345.snowflakecomputing.com\",\n",
         "    'account': 'GBA61345',\n",
         "    'user': 'ADMIN',\n",
-        "    'password': 'IIVE2BGinnyc?'\n",
+        "    'password': '?'\n",
         "}\n",
         "\n",
         "print(\"Connecting to Snowflake.....\\n\")\n",
